# t4_geom_convert

./: .coveragerc  .flake8  .gitignore  .project  .pylintrc  .pylintrc.swp  .readthedocs.yaml  CHANGELOG.md  Jenkinsfile  MANIFEST.in  README.md  archi-convertisseur.xmi  conftest.py  pyproject.toml  setup.cfg  setup.py  testimport.py
Converter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MIP/: tests.py
MIP/geom/: another_parser.py  cells.py  cmodel.inp  composition.py  copt.py.bak  forcad.py  forcad.py.bak  inp1.inp  main.py  parsegeom.py  parsegeom.py.bak  semantics.py  surfaces.py  testgrammar.py  transforms.py  transforms.py.bak
MIP/geom/grammars/: __init__.py  composition.py  geom.ebnf  multioperand.ebnf  multioperand.py  multioperand.py.bak
MIP/mip/: __init__.py  blocks.py  cards.py  cellcard.py  datacard.py  inp1.inp  main.py  readme.rst  surfacecard.py  utils.py
Oracle/: .clang-format  CMakeLists.txt  Makefile  README.md  architecture.xmi  clang_cmd.txt  cmake3_cmd.txt  cppcheck_cmd.txt  googletest-CMakeLists.txt.in  t4g_v10.txt
Oracle/cmake/: DetectOS.cmake  FindMEDFile.cmake  FindROOT.cmake  LibUtils.cmake
Oracle/data/: input_slab  input_slab_binary  slab.t4  slabbinp  slabp
Oracle/docs/: oracle.cfg
Oracle/include/: MCNPGeometry.hh  PTRACFormat.hh  Statistics.hh  T4Geometry.hh  options_compare.hh  options_explainT4.hh
Oracle/mcnp/: input_slab  slabp
Oracle/src/: AllTests.cc  MCNPGeometry.cc  MCNPGeometryInput_test.cc  MCNPGeometryPtrac_test.cc  Statistics.cc  T4Geometry.cc  T4Geometry_test.cc  compare_geoms.cc  explainT4.cc  options_compare.cc  options_explainT4.cc  oracle.cc
Oracle/src/tests/: AllTests.cc  MCNPGeometryInput_test.cc  MCNPGeometryPtrac_test.cc  Statistics_test.cc  T4Geometry_test.cc
docs/: changelog.rst  conf.py  getting_started.rst  index.rst  requirements.txt
docs/modules/: t4_geom_convert.IntegrationTests.rst  t4_geom_convert.Kernel.BoundaryCondition.rst  t4_geom_convert.Kernel.Composition.rst  t4_geom_convert.Kernel.Configuration.rst  t4_geom_convert.Kernel.Exceptions.rst  t4_geom_convert.Kernel.FileHandlers.Parser.rst  t4_geom_convert.Kernel.FileHandlers.Writer.rst  t4_geom_convert.Kernel.FileHandlers.rst  t4_geom_convert.Kernel.GeomComp.rst  t4_geom_convert.Kernel.Surface.rst  t4_geom_convert.Kernel.Transformation.rst  t4_geom_convert.Kernel.Volume.rst  t4_geom_convert.Kernel.rst  t4_geom_convert.UnitTests.CompositionTest.rst  t4_geom_convert.UnitTests.VolumeTest.rst  t4_geom_convert.UnitTests.rst  t4_geom_convert.rst
docs/oracle/: README.rst
t4-geom-convert/: Jenkinsfile  setup.py
t4-geom-convert/Kernel/Composition/: CCompositionConversionMCNPToT4.py  CCompositionMCNP.py  CCompositionT4.py  CDictCompositionMCNP.py  CDictCompositionT4.py  CIntermediateCompositionT4.py  CIsotopeConversion.py  EIsotopeAtomicNumberMCNP.py  EIsotopeNameElementT4.py
t4-geom-convert/Kernel/Configuration/: CConfigParameters.py
t4-geom-convert/Kernel/GeomComp/: CDictGeomCompT4.py  CGeomCompT4.py  CIntermediateGeomCompT4.py
t4-geom-convert/Kernel/Surface/: CDictSurfaceMCNP.py  CDictSurfaceT4.py  CIntermediateSurfaceT4.py  CSurfaceConversionMCNPToT4.py  CSurfaceMCNP.py  CSurfaceT4.py  CTransformationMCNP.py  DTypeConversion.py  ESurfaceTypeMCNP.py  ESurfaceTypeT4.py
t4-geom-convert/Kernel/Volume/: CCellConversion.py  CCellConversionMCNPToT4.py  CCellMCNP.py  CDictCellMCNP.py  CDictVolumeT4.py  CIntermediateVolumeT4.py  CTreeMethods.py  CVolumeT4.py
t4-geom-convert/UnitTests/SurfaceTest/: TestSurfaces.py
t4_geom_convert/: .gitignore  .project  Debug.py  __init__.py  conftest.py  main.py
t4_geom_convert/CLI/: Converter_CLI.py
t4_geom_convert/IntegrationTests/: test_mcnp_conversion.py
t4_geom_convert/IntegrationTests/data/: .gitignore  chars.i  chars.imcnp  chars_latin1.imcnp  chars_spaces_hash.i  chars_spaces_hash.imcnp  cone.imcnp  cone_-1.imcnp  cone_-1_rot.imcnp  cone_0.i  cone_0.imcnp  cone_0_rot.imcnp  cone_1.imcnp  cone_1_rot.imcnp  cone_rot.imcnp  continuation.i  continuation.imcnp  density_zeros.imcnp  elliptic_tori.i  elliptic_tori.imcnp  empty.i  empty.imcnp  empty_subcell.imcnp  fill.i  fill.imcnp  fill2.imcnp  fill_2times.imcnp  fill_transform.imcnp  fill_transform2.imcnp  fill_truncated.imcnp  fill_truncated2.imcnp  hash_no_space.imcnp  importance.imcnp  lattice_complement.imcnp  lattice_fill.i  lattice_fill.imcnp  lattice_hex.imcnp  lattice_hex_3d.imcnp  lattice_hex_irregular.imcnp  lattice_hex_irregular2.imcnp  (+102 more)
t4_geom_convert/Kernel/: MCNPDataCards.py  Progress.py  Utils.py  VectUtils.py  main.py
t4_geom_convert/Kernel/BoundaryCondition/: CBoundCond.py  CConversionBoundaryCondition.py
t4_geom_convert/Kernel/Composition/: Abundances.py  CCompositionConversionMCNPToT4.py  CCompositionMCNP.py  CCompositionT4.py  CDictCompositionMCNP.py  CDictCompositionT4.py  CIntermediateCompositionT4.py  CIsotopeConversion.py  CompositionConversionMCNPToT4.py  ConstructCompositionT4.py  ConvertIsotope.py  EIsotopeAtomicNumberMCNP.py  EIsotopeNameElementT4.py  comp.ucls
t4_geom_convert/Kernel/Configuration/: CConfigParameters.py  CMessages.py  config_parameters.ini
t4_geom_convert/Kernel/GeomComp/: CDictGeomCompT4.py  CGeomCompT4.py  CIntermediateGeomCompT4.py  ConstructGeomCompT4.py  __init__.py
t4_geom_convert/Kernel/Surface/: CDictSurfaceMCNP.py  CDictSurfaceT4.py  CIntermediateSurfaceT4.py  CSurfaceCollection.py  CSurfaceConversionMCNPToT4.py  CSurfaceMCNP.py  CSurfaceT4.py  CTransformationMCNP.py  CollectionDict.py  ConstructSurfaceT4.py  ConversionSurfaceMCNPToT4.py  DTypeConversion.py  Duplicates.py  ESurfaceTypeMCNP.py  ESurfaceTypeT4.py  MacroBodies.py  SurfaceCollection.py  SurfaceConversionError.py  SurfaceMCNP.py  SurfaceT4.py  __init__.py
t4_geom_convert/Kernel/Transformation/: CConversionSurfaceTransformed.py  CDictSurfaceTransformed.py  CSurfaceTransformed.py  CTransformationFonction.py  CTransformationQuad.py  ConversionSurfaceTransformed.py  SurfaceTransformed.py  Transformation.py  TransformationError.py  TransformationQuad.py
t4_geom_convert/UnitTests/: test_VectUtils.py
(+71 files in other folders)
