[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool]

  [tool.pytest]

    [tool.pytest.ini_options]
    addopts = "-v -s -ra --doctest-modules --doctest-continue-on-failure --hypothesis-show-statistics --durations=50 --strict-markers"
    norecursedirs = ["data", ".eggs", "doc"]
    testpaths = ["t4_geom_convert"]
    markers = [
        "oracle: needs --mcnp-path and --oracle-path options to run"
    ]

  [tool.pylint]

    [tool.pylint.master]
    jobs = 0

    [tool.pylint.message_control]
    disable = [
      "print-statement",
      "parameter-unpacking",
      "unpacking-in-except",
      "old-raise-syntax",
      "backtick",
      "long-suffix",
      "old-ne-operator",
      "old-octal-literal",
      "import-star-module-level",
      "non-ascii-bytes-literal",
      "raw-checker-failed",
      "bad-inline-option",
      "locally-disabled",
      "file-ignored",
      "suppressed-message",
      "useless-suppression",
      "deprecated-pragma",
      "use-symbolic-message-instead",
      "apply-builtin",
      "basestring-builtin",
      "buffer-builtin",
      "cmp-builtin",
      "coerce-builtin",
      "execfile-builtin",
      "file-builtin",
      "long-builtin",
      "raw_input-builtin",
      "reduce-builtin",
      "standarderror-builtin",
      "unicode-builtin",
      "xrange-builtin",
      "coerce-method",
      "delslice-method",
      "getslice-method",
      "setslice-method",
      "no-absolute-import",
      "old-division",
      "dict-iter-method",
      "dict-view-method",
      "next-method-called",
      "metaclass-assignment",
      "indexing-exception",
      "raising-string",
      "reload-builtin",
      "oct-method",
      "hex-method",
      "nonzero-method",
      "cmp-method",
      "input-builtin",
      "round-builtin",
      "intern-builtin",
      "unichr-builtin",
      "map-builtin-not-iterating",
      "zip-builtin-not-iterating",
      "range-builtin-not-iterating",
      "filter-builtin-not-iterating",
      "using-cmp-argument",
      "eq-without-hash",
      "div-method",
      "idiv-method",
      "rdiv-method",
      "exception-message-attribute",
      "invalid-str-codec",
      "sys-max-int",
      "bad-python3-import",
      "deprecated-string-function",
      "deprecated-str-translate-call",
      "deprecated-itertools-function",
      "deprecated-types-field",
      "next-method-defined",
      "dict-items-not-iterating",
      "dict-keys-not-iterating",
      "dict-values-not-iterating",
      "deprecated-operator-function",
      "deprecated-urllib-function",
      "xreadlines-attribute",
      "deprecated-sys-function",
      "exception-escape",
      "comprehension-escape",
      "import-outside-toplevel",
    ]

    [tool.pylint.basic]
    argument-naming-style = "snake_case"
    bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata",]
    class-attribute-naming-style = "any"
    class-naming-style = "PascalCase"
    const-naming-style = "any"
    docstring-min-length = -1
    function-naming-style = "any"
    good-names = ["i", "j", "k", "Run", "_",]
    method-naming-style = "any"
    variable-naming-style = "snake_case"
