[metadata]
name = t4_geom_convert
version = attr: t4_geom_convert.__version__
author = Davide Mancusi, Martin Maurey, Jonathan Faustin
author_email = davide.mancusi@cea.fr
description = A tool to convert MCNP geometries into the TRIPOLI-4 format
url = https://github.com/arekfu/t4_geom_convert/
project_urls =
        Bug tracker = https://github.com/arekfu/t4_geom_convert/issues
        Source code = https://github.com/arekfu/t4_geom_convert
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)
license_file = COPYING
classifiers =
        Programming Language :: Python :: 3
        Development Status :: 4 - Beta
        Environment :: Console
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Operating System :: POSIX :: Linux
        Topic :: Scientific/Engineering :: Physics

[options.entry_points]
console_scripts =
        t4_geom_convert = t4_geom_convert.main:main

[options]
python_requires = >=3.6, <4
install_requires = 
        TatSu
        numpy
tests_require =
        pytest
        pytest-cov
        pytest-xdist
        pytest-timeout
        hypothesis
packages = find:
include_package_data = True

[options.extras_require]
dev =
        bump2version
        pytest
        pytest-cov
        pytest-xdist
        pytest-timeout
        hypothesis
        flake8
        pylint
        sphinx
        sphinx_rtd_theme
        recommonmark

[options.packages.find]
exclude =
        doc
        t4_geom_convert.UnitTests
        t4_geom_convert.UnitTests.*
        t4_geom_convert.Debug
        Oracle

[flake8]
exclude = data, .eggs, doc
ignore =
        F401  # unused import
        F811  # redefined from outer scope
        E226  # whitespace around operators
        W503  # line break before binary operator
